[package]
name = "nyaa_tracker"
version = "0.1.0"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"


[dependencies]
reqwest = "0.9.17"
hashbrown = "0.3.0"
regex = "1.1.6"

serde = "1.0.91"
serde_bencode = "0.2.0"
serde_derive = "1.0.91"
serde_bytes = "0.11.1"
serde_urlencoded = "0.5.5"

rss = "1.7.0"

rust-crypto = "0.2.36"

lazy_static = "1.3.0"

bencode = "0.1.16"

postgres = "0.15.2"

hyper = "0.12.29"
# serde_json = "1.0.39"

tokio = "0.1.21"
tokio-postgres = "0.4.0-rc.2"
tokio-io = "0.1.12"

futures = "0.1.27"
http = "0.1.17"
hyper-tls = "0.3.2"

parking_lot = "0.8.0"