[package]
name = "nyaa_tracker"
version = "0.1.0"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"


[dependencies]
reqwest = "0.9.24"
hashbrown = "0.6.3"
regex = "1.3.1"

serde = "1.0.104"
serde_bencode = "0.2.0"
serde_derive = "1.0.104"
serde_bytes = "0.11.3"
serde_urlencoded = "0.6.1"
serde_json = "1.0.44"

rss = "1.8.0"

rust-crypto = "0.2.36"

lazy_static = "1.4.0"

bencode = "0.1.16"

postgres = "0.17.0"

hyper = "0.13.1"
# serde_json = "1.0.39"

# tokio = "0.2.6"
tokio = {version="0.2.6", features=["time", "macros"]}
tokio-postgres = "0.5.1"
tokio-io = "0.1.12"

futures = "0.3.1"
http = "0.2.0"
hyper-tls = "0.4.0"

parking_lot = "0.10.0"