[package]
name = "nyaa_tracker"
version = "0.2.3"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"


[dependencies]
serde = "1.0.104"
serde_bencode = "0.2.0"
serde_derive = "1.0.104"
serde_bytes = "0.11.3"
serde_urlencoded = "0.6.1"
serde_json = "1.0.45"

rss = "1.9.0"

rust-crypto = "0.2.36"

lazy_static = "1.4.0"

bencode = "0.1.16"

hyper = "0.13.2"

# tokio = {version="0.2.11", features=["time", "macros", "rt-core"]}
tokio = {version="0.2.11", features=["full"]}
tokio-postgres = "0.5.2"
tokio-io = "0.1.12"

futures = "0.3.1"
http = "0.2.0"
hyper-tls = "0.4.1"

parking_lot = "0.10.0"